Overflow Fixes

--- a/public/utils/css/login-style.css
+++ b/public/utils/css/login-style.css
@@ -327,3 +327,9 @@ footer {
   text-align: center;
   margin-top: 3em;
 }
+
+@media only screen and (min-width: 800px) {
+  body {
+    overflow: hidden;
+  }
+}
